--- a/templates/components/custom/sidebar/custom-sidebar.html
+++ b/templates/components/custom/sidebar/custom-sidebar.html
@@ -1,25 +1,24 @@
 <!-- Menu Mobile Sidebar -->
 <div class="custom-sidebar custom-menu-mobile custom-sidebar-left animated{{#if theme_settings.customMegamenu}} custom-menu-megamenu{{/if}}" id="custom-menu-mobile">
-    <a href="#" class="custom-sidebar-close" aria-label="Close Menu Sidebar">
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-close"></use></svg>
-    </a>
+    <div class="custom-sidebar-header">
+        <button class="custom-sidebar-close" aria-label="Show menu" aria-haspopup="true" aria-expanded="true" aria-controls="header-menu" tabindex="-1">
+            <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-cancel" viewBox="0 0 24 24"><path d="M6.758 17.243 12.001 12m5.243-5.243L12 12m0 0L6.758 6.757M12.001 12l5.243 5.243" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+        </button>
+    </div>
+
     <div class="custom-sidebar-wrapper navPages-container" data-menu>
         {{> components/common/navigation-mobile }}
     </div>
 </div>
 
-<!-- Search Mobile Sidebar -->
-<div class="custom-sidebar custom-search-mobile custom-sidebar-left" id="custom-search-mobile">
-    <a href="#" class="custom-sidebar-close" aria-label="Close Search Sidebar">
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-close"></use></svg>
-    </a>
-    <div class="custom-sidebar-wrapper"></div>
-</div>
 
 <!--  Cart Sidebar -->
 <div class="custom-sidebar custom-cart-sidebar custom-sidebar-right" id="custom-cart-sidebar">
-    <a href="#" class="custom-sidebar-close" aria-label="Close Cart Sidebar">
-        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-close"></use></svg>
-    </a>
+    <div class="custom-sidebar-header">
+        <button class="custom-sidebar-close" aria-label="Show menu" aria-haspopup="true" aria-expanded="true" aria-controls="header-menu" tabindex="-1">
+            <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-cancel" viewBox="0 0 24 24"><path d="M6.758 17.243 12.001 12m5.243-5.243L12 12m0 0L6.758 6.757M12.001 12l5.243 5.243" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+        </button>
+    </div>
+
     <div class="custom-sidebar-wrapper"></div>
 </div>
