--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -81,5 +81,8 @@
 @import "layouts/layouts"; // 1
 
 
+/* AOS */
+@import "../../node_modules/aos/dist/aos";
+
 /* CSS for custom theme */
 @import "custom/custom-theme";
