--- a/templates/components/common/navigation-list.html
+++ b/templates/components/common/navigation-list.html
@@ -5,7 +5,7 @@
 >
     {{name}}
     <i class="icon navPages-action-moreIcon" aria-hidden="true">
-        <svg><use href="#icon-chevron-down" /></svg>
+        <svg><use href="#icon-arrow-right" /></svg>
     </i>
 </a>
 <div class="navPage-subMenu" id="navPages-{{id}}" aria-hidden="true" tabindex="-1">
@@ -33,7 +33,7 @@
                             data-collapsible-enabled-state="closed"
                         >
                             <i class="icon navPages-action-moreIcon" aria-hidden="true">
-                                <svg><use href="#icon-chevron-down" /></svg>
+                                <svg><use href="#icon-arrow-right" /></svg>
                             </i>
                         </span>
                     </a>
