--- a/templates/components/custom/header/custom-megamenu-theme-file.html
+++ b/templates/components/custom/header/custom-megamenu-theme-file.html
@@ -42,13 +42,13 @@
                         cateAreaWidth: '60%',
                         cateColumns: 2,
                         imagesRight: `
-                        <div class="megamenu-right-item custom-fadeInLeft" data-step-animate="1">
+                        <div class="megamenu-right-item fadeInRight" data-step-animate="1">
                             <a class="image hover-banner" href="#" aria-label="Shop All">
                                 <img src="https://cdn11.bigcommerce.com/s-eayt5v1360/images/stencil/original/image-manager/megamenu-style1-img-1.jpg" alt="Shop All Image">
                             </a>
                         </div>
 
-                        <div class="megamenu-right-item custom-fadeInLeft" data-step-animate="2">
+                        <div class="megamenu-right-item fadeInRight" data-step-animate="2">
                             <a class="image hover-banner" href="#" aria-label="Spring/Summer Catalogue">
                                 <img src="https://cdn11.bigcommerce.com/s-eayt5v1360/images/stencil/original/image-manager/megamenu-style1-img-2.jpg" alt="Spring/Summer Catalogue Image">
                             </a>
