--- a/templates/components/custom/header/header-layout-2.html
+++ b/templates/components/custom/header/header-layout-2.html
@@ -3,7 +3,7 @@
         <div class="headerMiddle_item headerMiddle_item--left text-left">
             <div class="items item--hamburger">
                 <a class="mobileMenu-toggle" href="#" data-mobile-menu-toggle="menu">
-                    <span class="mobileMenu-toggleIcon">{{lang 'header.toggle_menu'}}</span>
+                    <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-menu" viewBox="0 0 24 24"><path d="M3 5h18M3 12h18M3 19h18" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg>
                 </a>
             </div>
             <div class="items item--searchMobile hide-on-desktop">
