--- a/assets/scss/components/stencil/navPages/_navPages.scss
+++ b/assets/scss/components/stencil/navPages/_navPages.scss
@@ -267,11 +267,15 @@
 
     span:not(.navPages-label) {
         color: stencilColor("navPages-color");
+
+        @include smax-m {
+            color: #000000;
+        }; 
     }
 
     &.navPages-action-lv2 {
         span:not(.navPages-action-moreIcon) {
-            font-size: $fontSize-root - 2px;
+            font-size: $fontSize-root;
             color: stencilColor("navPages-lv2-color");
             font-weight: 400;
 
@@ -1421,7 +1425,7 @@
         transition-duration: 0.4s;
         transform: none;
         transition-property: transform;
-        background: $color-white;
+        background: transparent;
 
         .has-activeNavPages & {
             display: block;
@@ -1431,12 +1435,11 @@
     .navPages-item {
         width: 100%;
         margin: 0;
-        border-bottom: 1px solid #eeeeee;
         position: relative;
 
         .navPages-action {
-            font-size: $fontSize-root - 2px;
-            color: $color-textBase;
+            font-size: $fontSize-root;
+            color: #000000 !important;
             margin: 0;
             padding: 0 15px;
             display: flex;
@@ -1458,8 +1461,8 @@
                 background: transparent !important;
 
                 .icon {
-                    color: $color-textBase;
-                    fill: $color-textBase !important;
+                    color: #000000;
+                    fill: #000000 !important;
                 }
             }
 
@@ -1479,16 +1482,15 @@
                 margin-left: 0;
 
                 svg {
-                    fill: $color-textBase;
-                    color: $color-textBase;
-                    stroke: $color-textBase;
+                    fill: #000000;
+                    color: #000000;
+                    stroke: #000000;
                     pointer-events: none;
                     display: inline-block;
                     vertical-align: middle;
                     transition: $anchor-transition;
-                    transform: rotate(-90deg);
-                    width: 13px;
-                    height: 13px;
+                    width: 24px;
+                    height: 24px;
                 }
             }
 
@@ -1536,10 +1538,8 @@
         }
 
         >.navPages-action {
-            font-size: $fontSize-root - 2;
-            font-weight: $fontWeight-bold;
-            line-height: 40px;
-            font-weight: 500;
+            font-size: $fontSize-root;
+            line-height: 50px;
             text-transform: capitalize;
 
             .text {
@@ -1549,15 +1549,21 @@
 
         .navPage-subMenu {
             top: 0;
-            right: 100%;
             left: auto;
-            width: 100%;
-            height: 100%;
             opacity: 1;
             pointer-events: auto;
-            visibility: visible;
             transform: none;
             box-shadow: none;
+
+            // ! ------ Add ------
+            left: 0;
+            width: 100%;
+            height: 100%;
+            visibility: hidden;
+            opacity: 0;
+            overflow: hidden;
+            scrollbar-width: none;
+            
         }
 
         >.navPage-subMenu {
@@ -1584,8 +1590,7 @@
             }
 
             .navPages-action {
-                border-bottom: 1px solid stencilColor('navPages-subMenu-separatorColor');
-                font-size: $fontSize-root - 2px;
+                font-size: $fontSize-root;
             }
         }
 
@@ -1678,6 +1683,11 @@
             top: 0;
             right: 0;
             margin: 0;
+
+            // ! ------ Add ------
+            z-index: 10;
+            visibility: visible;
+            opacity: 1;
 
             &#navPages-currency {
                 top: -10px;
