--- a/templates/components/common/navigation-dropdown.html
+++ b/templates/components/common/navigation-dropdown.html
@@ -1,10 +1,10 @@
 <div class="navPage-subMenu navPage-subMenu-horizontal level-2" id="navPages-{{id}}" aria-hidden="true" tabindex="-1">
     <div class="container">
-        <ul class="navPage-subMenu-list">
+        <ul class="navPage-subMenu-list navPage-subMenu-list--lv2">
             <li class="navPage-subMenu-item-parent navPage-subMenu-item-child navPage-subMenu-title">
                 <p class="navPage-subMenu-action navPages-action navPages-action-lv1 navPages-action-depth-max has-subMenu">
                     <span class="navPages-action-moreIcon" aria-hidden="true">
-                        <svg class="icon"><use href="#icon-long-arrow-left" /></svg>
+                        <svg class="icon icon-back"><use href="#icon-long-arrow-left" /></svg>
                     </span>
                     <a class="text hover-link" href="{{url}}"><span>{{name}}</span></a>
                 </p>
@@ -16,11 +16,11 @@
             </li>
             {{#each children}}
                 {{#if children}}
-                    <li class="navPage-subMenu-item-child has-dropdown custom-fadeInLeft" data-step-animate="0">
+                    <li class="navPage-subMenu-item-child has-dropdown fadeInRight" data-step-animate="{{@index}}">
                         <p class="navPage-subMenu-action navPages-action navPages-action-lv2 navPages-action-depth-max has-subMenu{{#if is_active}} activePage{{/if}}" data-navId="navPages-{{id}}">
                             <a class="text hover-link" href="{{url}}"><span>{{name}}</span></a>
                             <span class="navPages-action-moreIcon" aria-hidden="true">
-                                <svg class="icon"><use href="#icon-chevron-down" /></svg>
+                                <svg class="icon"><use href="#icon-arrow-right" /></svg>
                             </span>
                         </p>
                         <div class="navPage-subMenu navPage-subMenu-horizontal level-3" aria-hidden="true" tabindex="-1">
@@ -28,7 +28,7 @@
                                 <li class="navPage-subMenu-item-parent navPage-subMenu-item-child navPage-subMenu-title">
                                     <p class="navPage-subMenu-action navPages-action navPages-action-lv2 {{#if is_active}} activePage{{/if}}">
                                         <span class="navPages-action-moreIcon" aria-hidden="true">
-                                            <svg class="icon"><use href="#icon-long-arrow-left" /></svg>
+                                            <svg class="icon icon-back"><use href="#icon-long-arrow-left" /></svg>
                                         </span>
                                         <a class="text hover-link" href="{{url}}"><span>{{name}}</span></a>
                                     </p>
@@ -47,7 +47,7 @@
                         </div>
                     </li>
                 {{else}}
-                    <li class="navPage-subMenu-item-child navPages-action-end custom-fadeInLeft" data-step-animate="0">
+                    <li class="navPage-subMenu-item-child navPages-action-end fadeInRight" data-step-animate="{{@index}}">
                         <a class="navPage-subMenu-action navPages-action navPages-action-lv2 hover-link no-subMenu{{#if is_active}} activePage{{/if}}" href="{{url}}"><span class="text">{{name}}</span></a>
                     </li>
                 {{/if}}
