--- a/templates/components/common/navigation-menu.html
+++ b/templates/components/common/navigation-menu.html
@@ -1,7 +1,7 @@
 <nav class="navPages">
     <ul class="navPages-list{{#if theme_settings.customMegamenu}} navPages-list-megamenu navPages-list-custom{{/if}}{{#if theme_settings.navigation_design '!==' 'simple'}} navPages-list-depth-max{{/if}}">
         {{#each categories}}
-            <li class="navPages-item{{#if children}} has-dropdown{{/if}}">
+            <li class="navPages-item{{#if children}} has-dropdown{{/if}} fadeInRight" data-step-animate="{{@index}}">
             {{#if ../theme_settings.navigation_design '===' 'simple'}}
                 {{> components/common/navigation-list}}
             {{/if}}
