--- a/assets/scss/components/stencil/search/_search.scss
+++ b/assets/scss/components/stencil/search/_search.scss
@@ -101,7 +101,7 @@
 @include smax-m {
     #quickSearch {
         > .container {
-            padding: 15px;
+            padding: 6px 15px;
         }
 
         .form {
@@ -117,8 +117,19 @@
                 border-radius: 8px;
                 padding-right: 50px;
 
+                @include smax-m {
+                    padding-right: 15px;
+                    padding-left: 44px;
+                    font-size: 14px;
+                    color: stencilColor("color-textBase");
+                }; 
+
                 &::placeholder {
                     color: #8C8C8C;
+
+                    @include smax-m {
+                        color: stencilColor("color-textBase");
+                    }; 
                 }
             }
         }
@@ -129,6 +140,12 @@
             right: 20px;
             transform: translateY(-50%);
             padding: 0;
+
+            @include smax-m {
+                right: unset;
+                left: 0;
+                margin-left: -7px;
+            }
 
             .icon {
                 width: 24px;
@@ -373,6 +390,11 @@
             box-shadow: 0 5px 10px #0000001a;
             padding: 35px 0;
 
+            @include smax-m {
+                padding: 0;
+                padding-right: 17px;
+            }; 
+
             .openSearchDropdown2 & {
                 opacity: 1;
                 visibility: visible;
@@ -384,6 +406,10 @@
             .custom-search {
                 max-width: 80vw;
                 margin: 0 auto;
+
+                @include smax-m {
+                    max-width: 100%;
+                }; 
 
                 .container {
                     padding: 0 35px;
