Done Footer No Settings + Fix Payment

--- a/assets/scss/components/stencil/navPages/_navPages.scss
+++ b/assets/scss/components/stencil/navPages/_navPages.scss
@@ -1086,7 +1086,9 @@
 
             .image {
                 +.image {
-                    margin-top: 30px;
+                    @include smax-m {
+                        margin-top: 30px;
+                    }; 
                 }
             }
         }
