--- a/assets/scss/settings/global/color/_color.scss
+++ b/assets/scss/settings/global/color/_color.scss
@@ -84,3 +84,4 @@ $color-custom-black:                #212121;
 $color-custom-blue:                 #003CA6;
 $color-custom-white:                #ffffff;
 $color-custom-loading:				#f9f9f9;
+$color-custom-yellow:               #cba052;
