--- a/templates/components/common/currency-selector.html
+++ b/templates/components/common/currency-selector.html
@@ -18,17 +18,14 @@
             {{#each currency_selector.currencies}}
             <li class="dropdown-menu-item">
                 <a href="{{{switch_url}}}"
+                    class="{{#if is_active}} is-active{{/if}}"
                    data-currency-code="{{{code}}}"
                    {{#if cart_currency_switch_url.length '>' 0 }}
                    data-cart-currency-switch-url="{{{cart_currency_switch_url}}}"
                    {{/if}}
                    data-warning="{{lang 'common.currency_switch_promotion'}}"
                 >
-                {{#if is_active}}
-                    <strong>{{name}}</strong>
-                {{else}}
                     {{name}}
-                {{/if}}
                 </a>
             </li>
             {{/each}}
