--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -11,39 +11,135 @@
 {{/if}}
 <footer class="footer" role="contentinfo">
     <h2 class="footer-title-sr-only">{{lang 'footer.title'}}</h2>
+
+    <div class="footerLogo">
+        <div class="container">
+            <a href="/" class="footerLogo__wrapper">
+                <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.footer_logo}}" alt="{{theme_settings.footer_logo}}">
+            </a>
+        </div>
+    </div>
+
     <div class="container">
-        {{#if theme_settings.social_icon_placement_bottom '!==' 'bottom_none'}}
-            <article class="footer-info-col
-                footer-info-col--social
-                footer-info-col--{{#if theme_settings.social_icon_placement_bottom '===' 'bottom_left'}}left{{else}}right{{/if}}"
-                data-section-type="footer-webPages">
-                    <h3 class="footer-info-heading">{{lang 'social.connect'}}</h3>
-                    {{> components/common/social-links}}
-            </article>
-        {{/if}}
         <section class="footer-info">
             <article class="footer-info-col footer-info-col--small" data-section-type="footer-webPages">
-                <h3 class="footer-info-heading">{{lang 'footer.navigate'}}</h3>
+                <h3 class="footer-info-heading">{{theme_settings.footer_col1_heading}}</h3>
                 <ul class="footer-info-list">
-                    {{#each pages}}
+                    {{#if theme_settings.footer_col1_item1_text}}
                         <li>
-                            <a href="{{url}}">{{name}}</a>
+                            <a href="{{theme_settings.footer_col1_item1_link}}">{{theme_settings.footer_col1_item1_text}}</a>
                         </li>
-                    {{/each}}
-                    <li>
-                        <a href="{{urls.sitemap}}">{{lang 'sitemap.page_title'}}</a>
-                    </li>
+                    {{/if}}
+                    {{#if theme_settings.footer_col1_item2_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col1_item2_link}}">{{theme_settings.footer_col1_item2_text}}</a>
+                        </li>
+                    {{/if}}
+                    {{#if theme_settings.footer_col1_item3_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col1_item3_link}}">{{theme_settings.footer_col1_item3_text}}</a>
+                        </li>
+                    {{/if}}
+                    {{#if theme_settings.footer_col1_item4_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col1_item4_link}}">{{theme_settings.footer_col1_item4_text}}</a>
+                        </li>
+                    {{/if}}
+                    {{#if theme_settings.footer_col1_item5_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col1_item5_link}}">{{theme_settings.footer_col1_item5_text}}</a>
+                        </li>
+                    {{/if}}
+                    {{#if theme_settings.footer_col1_item6_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col1_item6_link}}">{{theme_settings.footer_col1_item6_text}}</a>
+                        </li>
+                    {{/if}}
                 </ul>
             </article>
 
-            <article class="footer-info-col footer-info-col--small" data-section-type="footer-categories">
-                <h3 class="footer-info-heading">{{lang 'footer.categories'}}</h3>
+            <article class="footer-info-col footer-info-col--small" data-section-type="footer-webPages">
+                <h3 class="footer-info-heading">{{theme_settings.footer_col2_heading}}</h3>
                 <ul class="footer-info-list">
-                    {{#each categories}}
+                    {{#if theme_settings.footer_col2_item1_text}}
                         <li>
-                            <a href="{{url}}">{{name}}</a>
+                            <a href="{{theme_settings.footer_col2_item1_link}}">{{theme_settings.footer_col2_item1_text}}</a>
                         </li>
-                    {{/each}}
+                    {{/if}}
+                    {{#if theme_settings.footer_col2_item2_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col2_item2_link}}">{{theme_settings.footer_col2_item2_text}}</a>
+                        </li>
+                    {{/if}}
+                    {{#if theme_settings.footer_col2_item3_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col2_item3_link}}">{{theme_settings.footer_col2_item3_text}}</a>
+                        </li>
+                    {{/if}}
+                    {{#if theme_settings.footer_col2_item4_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col2_item4_link}}">{{theme_settings.footer_col2_item4_text}}</a>
+                        </li>
+                    {{/if}}
+                </ul>
+            </article>
+
+            <article class="footer-info-col footer-info-col--small" data-section-type="footer-webPages">
+                <h3 class="footer-info-heading">{{theme_settings.footer_col3_heading}}</h3>
+                <ul class="footer-info-list">
+                    {{#if theme_settings.footer_col3_item1_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col3_item1_link}}">{{theme_settings.footer_col3_item1_text}}</a>
+                        </li>
+                    {{/if}}
+                    {{#if theme_settings.footer_col3_item2_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col3_item2_link}}">{{theme_settings.footer_col3_item2_text}}</a>
+                        </li>
+                    {{/if}}
+                    {{#if theme_settings.footer_col3_item3_text}}
+                        <li>
+                            <a href="{{theme_settings.footer_col3_item3_link}}">{{theme_settings.footer_col3_item3_text}}</a>
+                        </li>
+                    {{/if}}
+                </ul>
+            </article>
+
+            <article class="footer-info-col footer-info-col--small" data-section-type="footer-socials">
+                <h3 class="footer-info-heading">{{theme_settings.footer_col4_heading}}</h3>
+                {{#if theme_settings.footer_col4_desc}}
+                    <p class="text">{{theme_settings.footer_col4_desc}}</p>
+                {{/if}}
+                <ul class="footer-info-list">
+                    {{#if theme_settings.footer_col4_item1_link}}
+                        <li>
+                            <a href="{{theme_settings.footer_col4_item1_link}}">
+                                <span class="icon icon--instagram-footer">
+                                    <svg><use xlink:href="#icon-instagram-footer"></use></svg>
+                                </span>
+                            </a>
+                        </li>
+                    {{/if}}
+
+                    {{#if theme_settings.footer_col4_item2_link}}
+                        <li>
+                            <a href="{{theme_settings.footer_col4_item2_link}}">
+                                <span class="icon icon--facebook-footer">
+                                    <svg><use xlink:href="#icon-facebook-footer"></use></svg>
+                                </span>
+                            </a>
+                        </li>
+                    {{/if}}
+
+                    {{#if theme_settings.footer_col4_item3_link}}
+                        <li>
+                            <a href="{{theme_settings.footer_col4_item3_link}}">
+                                <span class="icon icon--tiktok-footer">
+                                    <svg><use xlink:href="#icon-tiktok-footer"></use></svg>
+                                </span>
+                            </a>
+                        </li>
+                    {{/if}}
                 </ul>
             </article>
 
@@ -61,33 +157,59 @@
             </article>
             {{/and}}
 
-            {{#if settings.address}}
-            <article class="footer-info-col footer-info-col--small" data-section-type="storeInfo">
-                <h3 class="footer-info-heading">{{lang 'footer.info'}}</h3>
-                <address>{{nl2br settings.address}}</address>
-                {{#if settings.phone_number}}
-                    <strong>{{lang 'footer.call_us' phone_number=settings.phone_number}}</strong>
-                {{/if}}
-            </article>
-            {{/if}}
-
-            <article class="footer-info-col" data-section-type="newsletterSubscription">
+          {{#if theme_settings.show_footer_newsletter_box}}
+            <article class="footer-info-col footer-info-col--small" data-section-type="newsletterSubscription">
                 {{#if settings.show_newsletter_box}}
                     {{> components/common/subscription-form}}
                 {{/if}}
-                {{> components/common/payment-icons}}
             </article>
+          {{/if}}
         </section>
-        {{#if theme_settings.show_powered_by}}
-            <div class="footer-copyright">
-                <p class="powered-by">{{lang 'footer.powered_by'}} <a href="https://www.bigcommerce.com?utm_source=merchant&amp;utm_medium=poweredbyBC" rel="nofollow">BigCommerce</a></p>
-            </div>
-        {{/if}}
-        {{#if theme_settings.show_copyright_footer}}
-            <div class="footer-copyright">
-                <p class="powered-by">&copy; {{moment format="YYYY"}} {{settings.store_name}} </p>
-            </div>
-        {{/if}}
     </div>
     {{{region name="ssl_site_seal--global"}}}
+    
+    <div class="footerBottom">
+        <div class="container">
+            <div class="footerBottom__wrapper flex flex-between flex-center-y flex-wrap">
+                <div class="footerBottom__item left">
+                    {{#or customer (unless settings.hide_price_from_guests)}}
+                        {{> components/common/currency-selector}}
+                    {{/or}}
+                </div>
+                <div class="footerBottom__item center">
+                    <ul class="footerBottom__socialList">
+                        {{#if theme_settings.show_copyright_footer}}
+                        <li>
+                            <a href="/">&copy;{{settings.store_name}} {{moment format="YYYY"}}</a>
+                        </li>
+                        {{/if}}
+                        {{#if theme_settings.footer_col2_item1_text}}
+                            <li>
+                                <a href="{{theme_settings.footer_col2_item1_link}}">{{theme_settings.footer_col2_item1_text}}</a>
+                            </li>
+                        {{/if}}
+                        {{#if theme_settings.footer_col2_item2_text}}
+                            <li>
+                                <a href="{{theme_settings.footer_col2_item2_link}}">{{theme_settings.footer_col2_item2_text}}</a>
+                            </li>
+                        {{/if}}
+                        {{#if theme_settings.footer_col2_item3_text}}
+                            <li>
+                                <a href="{{theme_settings.footer_col2_item3_link}}">{{theme_settings.footer_col2_item3_text}}</a>
+                            </li>
+                        {{/if}}
+                        {{#if theme_settings.footer_col2_item4_text}}
+                            <li>
+                                <a href="{{theme_settings.footer_col2_item4_link}}">{{theme_settings.footer_col2_item4_text}}</a>
+                            </li>
+                        {{/if}}
+                    </ul>    
+                </div>
+
+                <div class="footerBottom__item right">
+                    {{> components/common/payment-icons}}
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
