--- a/assets/scss/layouts/footer/_footer.scss
+++ b/assets/scss/layouts/footer/_footer.scss
@@ -210,9 +210,19 @@
     &__item {
         @include flexbox($align-items: center);
 
+        @include smax-s {
+            margin-bottom: 12px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }; 
+
         &.right {
-            justify-content: flex-end;
-            flex: 1 0 auto;
+            @include smin-s {
+                justify-content: flex-end;
+                flex: 1 0 auto;
+            }
 
             .footer-payment-icons {
                 --gap: 5px;
@@ -340,6 +350,10 @@
                 color: $color-custom-yellow;
                 font-size: 14px;
                 font-weight: 300;
+
+                @include smax-s {
+                    font-size: 12px;
+                }
             }
         }
     }
