--- a/templates/components/common/body.html
+++ b/templates/components/common/body.html
@@ -1,8 +1,14 @@
 <div class="body" id="main-content" data-currency-code="{{currency_selector.active_currency_code}}">
     {{#block "hero"}} {{/block}}
-    <div class="container">
+
+    {{#or (if page_type '===' 'default') (if page_type '===' 'category') (if (toLowerCase page.title) '==' 'ez street')}}
         {{#block "page"}} {{/block}}
-    </div>
+    {{else}}
+        <div class="container">
+            {{#block "page"}} {{/block}}
+        </div>
+    {{/or}}
+
     {{> components/common/modal/modal}}
     {{> components/common/alert/alert-modal}}
 </div>
